# krepel

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build_debug_x64.sh  create_krepel_project.py  ezEngine.natvis  fbuild.bff
buildSystem/CMake/: FindEZ_ENGINE.cmake  FindSFML.cmake  FindezEngine.cmake  bield.cmake  echoTargetProperties.cmake  krepelConfig.cmake  krepelUtilities.cmake
buildSystem/CMake/bield/: bieldConfig_Linux.cmake  bieldConfig_OSX.cmake  bieldConfig_Windows.cmake  bieldFlags.cmake  bieldGeneralConfig.cmake  bieldLogging.cmake  bieldUtilities.cmake
buildSystem/CMake/templates/: empty.cpp.template
code/: CMakeLists.txt
code/application/: CMakeLists.txt  pch.cpp  pch.h
code/application/implementation/: main.cpp
code/krEngine/: CMakeLists.txt  common.h  game.h  ownership.h  pch.cpp  pch.h  referenceCounting.h  rendering.h  transform2D.h
code/krEngine/common/: ezArrayPtrExtension.h  ezContainersExtension.h  ezExtensions.h  ezMakeArrayPtr.h  ezTypesExtension.h  traits.h  utils.h
code/krEngine/common/implementation/: utils.cpp  utils_Windows.inl
code/krEngine/game/: camera.h  defaultMainModule.h  gameLoop.h  mainModule.h
code/krEngine/game/implementation/: camera.cpp  defaultMainModule.cpp  gameLoop.cpp  mainModule.cpp
code/krEngine/implementation/: common.cpp  transform2D.inl
code/krEngine/ownership/: borrowed.h  owned.h  ownershipData.h  refCounted.h  refCountedPtr.h
code/krEngine/referenceCounting/: refCountedPtr.h  refcounted.h
code/krEngine/rendering/: debugRenderer.h  drawableBase.h  extraction.h  renderExtractor.h  renderer.h  shader.h  sprite.h  texture.h  vertexBuffer.h  window.h
code/krEngine/rendering/implementation/: debugRenderer.cpp  extractionBuffer.cpp  extractionBuffer.h  extractionData.cpp  extractionData.h  extractionDetails.h  opelGlCheck.cpp  opelGlCheck.h  openGlContext.inl  renderExtractor.cpp  renderer.cpp  shader.cpp  sprite.cpp  spriteDrawing.h  texture.cpp  textureImpl.h  textureInstance.h  uploadUniformValue.cpp  vertexBuffer.cpp  window.cpp  windowImpl.h
code/krGameLauncher/: CMakeLists.txt  main.cpp  pch.h
docs/: Krepel.mm  README.md  branching.md  coding.md  commitGuidelines.md  gameDesignIdeas.md  krepel-implementation.mm  thirdPartyLibs.md  tutorials.md
src/: main.cpp
testData/shaders/: invalid.fs  invalid.vs  sprite.fs  sprite.vs  texturedQuad.fs  texturedQuad.vs  valid.fs
testData/textures/: kitten.dds  readme.txt
tests/: CMakeLists.txt
tests/krEngineTests/: CMakeLists.txt  common.h  main.cpp  pch.cpp  pch.h  sanityTests.cpp  test_common.cpp  test_game.cpp  test_ownership.cpp  test_referenceCounting.cpp  test_renderer.cpp  test_shader.cpp  test_sprite.cpp  test_texture.cpp  test_vertexBuffer.cpp  test_window.cpp
tests/krGameTest1/: CMakeLists.txt  game.cpp  pch.h
